--- a/亿级流量系统多级缓存架构01.md
+++ b/亿级流量系统多级缓存架构01.md
@@ -1,5 +1,8 @@
 # 《亿级流量系统多级缓存架构10》
 
+高并发多高算高？是JD 阿里 腾讯级别的，还是58 美团级别的，还是瓜子，携程等三先垫上级别的，面试先问问这个。 电商的详情页才是并发最高的。做高并发先做请求的分类，看看有没有对于数据一致性的要求。这一点是解决高并发的一个核心问题。
+如果有，则要考虑到数据的分布，数据的同步以及接入的时候不能请求和修改数据的时间太长，还需要考虑用户相应的时间
+
 # Lua + 
 
 ## 课程主要内容
