--- a/亿级流量系统多级缓存架构01.md
+++ b/亿级流量系统多级缓存架构01.md
@@ -1,7 +1,11 @@
 # 《亿级流量系统多级缓存架构10》
 
 高并发多高算高？是JD 阿里 腾讯级别的，还是58 美团级别的，还是瓜子，携程等三先垫上级别的，面试先问问这个。 电商的详情页才是并发最高的。做高并发先做请求的分类，看看有没有对于数据一致性的要求。这一点是解决高并发的一个核心问题。
-如果有，则要考虑到数据的分布，数据的同步以及接入的时候不能请求和修改数据的时间太长，还需要考虑用户相应的时间
+如果有，则要考虑到数据的分布，数据的同步以及接入的时候不能请求和修改数据的时间太长，还需要考虑用户相应的时间. 数据一致性也分高低级别，高一致性的比如12306，低一致性又叫最终一致性。12306最前台展示的数据也不一定是对的，看见的时候
+也并不是即见即所得：还有一张票的时候，点击下单购买，结果怎么没了？第一种原因：看见了但在点击的这个时间段被别人买走了；第二种原因：看见票数等于1就是假的。在看到没有票之后，在返回看一下，票可能还有，显示一段时间，这是的数据是假的；
+弱一致性，最终一致性；也可能不存在了。高一致性的性能消耗也比较高。所以面试的时候第一可以反问面试官高并发到底有多高，第二可以问他对于数据一致性的要求高不高。削峰是个关键，最常见的手段是做集群，削峰之前要有个东西先能够扛住峰值的这
+个流量。当初nginx做的反向代理其实就是一个削峰的工作，nginx的官方数据是能够扛住50000并发量。而在订票或者秒杀的某个时间点，这个峰值肯定会超过50000，此时nginx还没削峰呢自己就被削了
+
 
 # Lua + 
 
