--- a/亿级流量系统多级缓存架构01.md
+++ b/亿级流量系统多级缓存架构01.md
@@ -4,7 +4,10 @@
 如果有，则要考虑到数据的分布，数据的同步以及接入的时候不能请求和修改数据的时间太长，还需要考虑用户相应的时间. 数据一致性也分高低级别，高一致性的比如12306，低一致性又叫最终一致性。12306最前台展示的数据也不一定是对的，看见的时候
 也并不是即见即所得：还有一张票的时候，点击下单购买，结果怎么没了？第一种原因：看见了但在点击的这个时间段被别人买走了；第二种原因：看见票数等于1就是假的。在看到没有票之后，在返回看一下，票可能还有，显示一段时间，这是的数据是假的；
 弱一致性，最终一致性；也可能不存在了。高一致性的性能消耗也比较高。所以面试的时候第一可以反问面试官高并发到底有多高，第二可以问他对于数据一致性的要求高不高。削峰是个关键，最常见的手段是做集群，削峰之前要有个东西先能够扛住峰值的这
-个流量。当初nginx做的反向代理其实就是一个削峰的工作，nginx的官方数据是能够扛住50000并发量。而在订票或者秒杀的某个时间点，这个峰值肯定会超过50000，此时nginx还没削峰呢自己就被削了
+个流量。当初nginx做的反向代理其实就是一个削峰的工作，nginx的官方数据是能够扛住50000并发量。而在订票或者秒杀的某个时间点，这个峰值肯定会超过50000，此时nginx还没削峰呢自己就被削了, 所以在很高的并发下nginx做削峰肯定不行的。这
+就可以根据qps做技术选型了。对于并发量的描述可以用qps，pv和uv。阿里腾讯并发量很高不太清楚，JD比前两个低多了，阿里腾讯一直飙升无上限，据说阿里每天产生的垃圾请求的数据都有十几T，请求量之大可想而知 瓜子qps=2000美团国美比瓜子稍高
+一点，高峰也不会超过5k。某省的公务员考试，并发量是瞬间的，平时没有，瞬间来了30000并发，像个delta函数，也肯定砸崩了。其实得看单个业务线的API的qps具体来谈。究竟能扛住多少并发得看硬件，软件的选择和优化（比如apache 1.x和2.x能
+处理的并发量有天壤之别），OS的优化，架构的设计，分层结构等。系统用量估算的时候，单节点的Tomcat不会让他的qps承担超过200
 
 
 # Lua + 
