--- a/亿级流量系统多级缓存架构01.md
+++ b/亿级流量系统多级缓存架构01.md
@@ -7,7 +7,12 @@
 个流量。当初nginx做的反向代理其实就是一个削峰的工作，nginx的官方数据是能够扛住50000并发量。而在订票或者秒杀的某个时间点，这个峰值肯定会超过50000，此时nginx还没削峰呢自己就被削了, 所以在很高的并发下nginx做削峰肯定不行的。这
 就可以根据qps做技术选型了。对于并发量的描述可以用qps，pv和uv。阿里腾讯并发量很高不太清楚，JD比前两个低多了，阿里腾讯一直飙升无上限，据说阿里每天产生的垃圾请求的数据都有十几T，请求量之大可想而知 瓜子qps=2000美团国美比瓜子稍高
 一点，高峰也不会超过5k。某省的公务员考试，并发量是瞬间的，平时没有，交卷瞬间来了30000并发，像个delta函数，也肯定砸崩了。其实得看单个业务线的API的qps具体来谈。究竟能扛住多少并发得看硬件，软件的选择和优化（比如apache 1.x和2.x能
-处理的并发量有天壤之别），OS的优化，架构的设计，分层结构等。系统用量估算的时候，单节点的Tomcat不会让他的qps承担超过200
+处理的并发量有天壤之别），OS的优化，架构的设计，分层结构等。系统用量估算的时候，单节点的Tomcat不会让他的qps承担超过200，tomcat还是一个比较重量级的容器，所以在前面尽量减少Tomcat的交集。并发量真的大于50000的话，可以通过划分域名
+从而划分模块，从而达到分流的目的。划分出来之后，一个模块或者业务就对应着一组服务器，一组服务器能扛住他自己的这套业务就可以了。如果模块已将不能再细分了，此时已经有点扛不住了，对于单一域名的还可以做CDN（分布在全网全球各个节点，是
+一个比较成熟的产品，十年前就有，有很多卖这种产品的中间商），缓存静态资源（html，css，图片等分发到全网的各个节点里）也做少量的对一致性要求低的动态缓存（请求到业务服务器里的某个接口所返回的值），现在技术可以做到后端的业务服务器跑
+job定时去提交url的数据，更新CDN的缓存内容，另一个方向，CDN也可以定时的去找后台服务器抓取数据更新缓存，这就是第一级别的缓存。CDN做好了之后可以极大地降低qps。CDN只有一个问题，就是怎么去做动态缓存，动态缓存的数据量不能太大了，
+否则成本太高了。CDN中动态缓存的数据，对一致性要求一般不是很高，比如列表页，搜索结果页。百度google什么的前几页的搜索结果是一样的，缓存起来了，不是实时搜索的，缓存所在的地方越靠前，系统性能越高，最前面就是CDN。CDN可以对这些数据5-
+10 min更新一次，写个Job定时跑。在大型系统中，Job是非常常用的，在大型互联网公司里Job的个数少则几百，多的可能到几万。CDN如果也扛不住，就用到我们的多级缓存了。缓存的核心是基于Redis的，但不仅仅是在Redis上
 
 
 # Lua + 
