--- a/亿级流量系统多级缓存架构01.md
+++ b/亿级流量系统多级缓存架构01.md
@@ -12,7 +12,9 @@
 一个比较成熟的产品，十年前就有，有很多卖这种产品的中间商），缓存静态资源（html，css，图片等分发到全网的各个节点里）也做少量的对一致性要求低的动态缓存（请求到业务服务器里的某个接口所返回的值），现在技术可以做到后端的业务服务器跑
 job定时去提交url的数据，更新CDN的缓存内容，另一个方向，CDN也可以定时的去找后台服务器抓取数据更新缓存，这就是第一级别的缓存。CDN做好了之后可以极大地降低qps。CDN只有一个问题，就是怎么去做动态缓存，动态缓存的数据量不能太大了，
 否则成本太高了。CDN中动态缓存的数据，对一致性要求一般不是很高，比如列表页，搜索结果页。百度google什么的前几页的搜索结果是一样的，缓存起来了，不是实时搜索的，缓存所在的地方越靠前，系统性能越高，最前面就是CDN。CDN可以对这些数据5-
-10 min更新一次，写个Job定时跑。在大型系统中，Job是非常常用的，在大型互联网公司里Job的个数少则几百，多的可能到几万。CDN如果也扛不住，就用到我们的多级缓存了。缓存的核心是基于Redis的，但不仅仅是在Redis上
+10 min更新一次，写个Job定时跑。在大型系统中，Job是非常常用的，在大型互联网公司里Job的个数少则几百，多的可能到几万。CDN如果也扛不住，就用到我们的多级缓存了。缓存的核心是基于Redis的，但不仅仅是在Redis上。Redis做缓存一般是
+这么搞：请求过来先不去计算，先在Redis中拿，拿不到再去计算。在访问数据之前，不管是SQL，URL或者是某些方法传参都可以作为一些key放到Redis集群里面（很长的SQL也可以做为key，可以做一个摘要算法，但要解决好哈希碰撞的问题）。Redis
+集群要由一个客户端来访问，controller可以做客户端，controller调service，service再调Redis集群。
 
 
 # Lua + 
