--- a/亿级流量系统多级缓存架构01.md
+++ b/亿级流量系统多级缓存架构01.md
@@ -14,7 +14,21 @@ job定时去提交url的数据，更新CDN的缓存内容，另一个方向，CD
 否则成本太高了。CDN中动态缓存的数据，对一致性要求一般不是很高，比如列表页，搜索结果页。百度google什么的前几页的搜索结果是一样的，缓存起来了，不是实时搜索的，缓存所在的地方越靠前，系统性能越高，最前面就是CDN。CDN可以对这些数据5-
 10 min更新一次，写个Job定时跑。在大型系统中，Job是非常常用的，在大型互联网公司里Job的个数少则几百，多的可能到几万。CDN如果也扛不住，就用到我们的多级缓存了。缓存的核心是基于Redis的，但不仅仅是在Redis上。Redis做缓存一般是
 这么搞：请求过来先不去计算，先在Redis中拿，拿不到再去计算。在访问数据之前，不管是SQL，URL或者是某些方法传参都可以作为一些key放到Redis集群里面（很长的SQL也可以做为key，可以做一个摘要算法，但要解决好哈希碰撞的问题）。Redis
-集群要由一个客户端来访问，controller可以做客户端，controller调service，service再调Redis集群。
+集群要由一个客户端来访问，controller可以做客户端，controller调service，service再调Redis集群。给单个tomcat的qps不要超过200，如果超过的话响应时间会变长：50-100qps在集群内网1-2ms，外网也差不多50ms以内，但是超过100qps
+之后响应延迟明显会增高。而且tomcat是基于JVM的，其性能跟C语言就没法比了。一般的接入层架构就得像周老师说的那样：单条业务线接入层最前端是一台lvs管着分发请求，hold住流量，转发给后面接好几个nginx。所以lvs和nginx两层都是流量层，
+做流量分发（终极解决方案，这就到了7层了，能看见URL了）。这一层的nginx后面，根据业务可以再加一层应用层的nginx，每台接入层的nginx分发请求给多台应用层的nginx，在应用层的nginx上我们可以用C开发nginx模块或者用lua写内嵌脚本了。
+C程序的性能很高，但是开发成本也很高，这里主要学习Lua写内嵌脚本，nginx + lua + Redis 和 nginx + lua + Kafka，前者通过nginx跑lua脚本访问Redis集群，Redis集群可以缓存数据和大value，比如整段的的json数据，这样请求
+刚到应用层就从缓存里拿到数据给返回回去了，很快；写到Kafka消息队列里，后端的tomcats慢慢去消费。nginx是访问不了Redis和Kafka，所以才需要Lua，他就像个胶水一样。Lua前面不一定非得是nginx。Lua也可以写到Redis里。但是脚本语言，
+比如Lua，php，python，不太适合大项目的开发，不好管，不可能50几个人都写脚本语言在一个团队里。至少目前这些语言还不够工程化，工程化表示的是风险可控。Redis里有数据的话，把数据返回应用层的nginx，后者再返回给接入层的nginx，然后
+直接返回给client（由于内核arp协议已经调过，而且VIP就设置在其lo的子接口上了，在客户端看来source和destination IP都没问题，就会接受数据包）。每一次请求应用层nginx都会产生大量的socket向Redis建立连接，此时可以考虑在nginx里
+再做一级缓存（nginx是很轻量级的应用，随便开几百个nginx跟玩儿似的，这个概念要有），减少应用层nginx到Redis的请求。这里有个问题，那就是所有应用层的nginx机器都是自己的缓存自己看得见，而不是共享的。解决方法就是在接入层的nginx
+里面也写入Lua脚本，查看请求要访问的URL（由于nginx工作在七层协议，所以他能看见URL），然后对URL取hash然后取模，根据结果把请求负载到特定的一台或一组应用层nginx上，相同的URL会被转发到相同的应用层nginx上。应用层nginx可以用
+Lua Cache或者nginx内置的缓存插件做缓存的读写。URL中有#的话，要把他后面的去掉之后再取hash；URL带？和参数的话，而Tomcat呢？到现在还没干活。这里Tomcat方面的难点是：它怎么去更新Redis中的数据。再一个难点是：数据更新过期时间，
+Redis里面的数据更新了，应用层nginx的缓存怎么过期，怎么做同步。这里两层的nginx其实是网关，做的是分流的工作，可以用SpringCloud的Zuul来做。请求过滤：过滤恶意请求，流量限制：请求数，每个节点每个服务上的请求数，这些都可以写在
+应用层的nginx上。这些以后都会讲。Redis集群的搭建方式有官方的Redis Cluster，也可以用第三方的组建。一般来说官方的夜曲金鱼比较成熟了。组织Redis集群就是把多节点的Redis分布开。有一种方式或入口，定位某个数据在哪一台服务器上。
+以上都是读请求，下面讨论写请求的情况。  
+
+
 
 
 # Lua + 
