--- a/亿级流量系统多级缓存高并发系统架构实战一.md
+++ b/亿级流量系统多级缓存高并发系统架构实战一.md
@@ -11,6 +11,13 @@ Multi后面执行的命令不能用前面的结果，而Lua脚本可以nginx和R
 ##整合
 先启动Redis(/opt/redis/bin下面), 执行redis-cli并带上参数eval： `redis-cli eval "return 1 + 1" 0`
 Redis服务器那边会执行lua脚本："return 1 + 1"，一定注意：这是Redis服务器算的，然后又返回的，最后那个0是参数。
+还可以接受参数：
+```
+[root@chaoren0 ~]# redis-cli eval "local msg='hello' return msg..ARGV[1]" 1 name maxiaoliu666
+"hellomaxiaoliu666"
+[root@chaoren0 ~]# redis-cli eval "local msg='hello' return msg..KEYS[1]" 1 name maxiaoliu666
+"helloname"
+```
 想执行一个脚本文件，要用--eval：`redis-cli --eval test.lua 0` 实际上是把文件提交上去了，在Redis里计算的，
 不是在本地计算的。这是`test.lua`的内容：
 ```
@@ -18,3 +25,6 @@ local count = redis.call("get", "count")
 redis.call("incr", "count")
 return count
 ```
+还可以远程执行异步提交：`redis-cli -h 192,168.1.101 -a密码 --eval ./test.lua name age . xiao6`
+这个脚本之执行一次，在生产环境下，根据不同的需求提交上去。但是这里有一个缺点：就是只能执行一次，每次想执行了，
+还要再次提交
