--- a/亿级流量系统多级缓存高并发系统架构实战一.md
+++ b/亿级流量系统多级缓存高并发系统架构实战一.md
@@ -11,8 +11,8 @@ Multi后面执行的命令不能用前面的结果，而Lua脚本可以nginx和R
 ##整合
 Redis源文件只有1.8M那么小，就内嵌了一个lua解析器，很厉害的。
 先启动Redis(/opt/redis/bin下面), 执行redis-cli并带上参数eval： `redis-cli eval "return 1 + 1" 0`
-Redis服务器那边会执行lua脚本："return 1 + 1"，一定注意：这是Redis服务器算的，然后又返回的，最后那个0是参数。
-还可以接受参数：
+Redis服务器那边会执行lua脚本："return 1 + 1"，一定注意：这是Redis服务器算的，然后又返回的，最后那个0是参数的个数。
+所以脚本执行的时候还可以接受参数（下标从1开始）：
 ```
 [root@chaoren0 ~]# redis-cli eval "local msg='hello' return msg..ARGV[1]" 1 name maxiaoliu666
 "hellomaxiaoliu666"
