--- a/亿级流量系统多级缓存高并发系统架构实战一.md
+++ b/亿级流量系统多级缓存高并发系统架构实战一.md
@@ -1,5 +1,6 @@
 # Lua 与Redis整合
 ## 前言
+Lua与nginx或Redis整合可以做的事情：
 网关API路由转发、Openregistry + kong,也就是Lua + nginx还可以做软防火墙，防止恶意请求和SQL注入、防刷。360可以提供基于机器学习的用户行为分析，分析是否是爬虫或者恶意请求。单点登录（建权）整合系统、输出动态页面（之前JD的商品详情页面就是拿lua动态输出出去的，有基于Lua语言的模版引擎，类似于Themleaf，它还可以去访问缓存系统，拿回来数据，包装一下输出动态页面，不需要包装的可以直接输出JSON）还可以在Redis里做一些Redis自身做不了的事情，比如做在线人数、点击次数累计的叠加，让nginx连Redis（不让tomcat接点击次数这个事，减负），接到请求之后直接加到Redis里的请求计数上。还有一些业务逻辑的请求，可以让它去做异步消费，连到Kafka上。还可以做验证码，验证码在高并发下，一般不会拿Java去生成图形验证码的，nginx就能生成。这部分跟Java基本没太大关系。
 
 Java做分布式事务、分布式的ID、一致性、缓存管理、服务管理和监控、服务的高可用
