--- a/亿级流量系统多级缓存高并发系统架构实战一.md
+++ b/亿级流量系统多级缓存高并发系统架构实战一.md
@@ -38,4 +38,16 @@ return count
 ```
 还可以远程执行异步提交：`redis-cli -h 192,168.1.101 -a密码 --eval ./test.lua name age . xiao6`
 这个脚本之执行一次，在生产环境下，根据不同的需求提交上去。但是这里有一个缺点：就是只能执行一次，每次想执行了，
-还要再次提交
+还要再次提交.解决这个问题，可以先把一段脚本load到Redis，然后在Redis执行：
+```
+[root@chaoren0 ~]# redis-cli script load "$(cat test2.lua)"
+"15555c7a0816aaa3b040614d2cb389c1850bbb83"
+```
+对文件取了一次哈希值。这里只是load，并没有去执行，想去调用的时候，就用它返回的这个哈希值去调用：
+```
+[root@chaoren0 ~]# redis-cli evalsha "15555c7a0816aaa3b040614d2cb389c1850bbb83" 0
+"4"
+[root@chaoren0 ~]# redis-cli evalsha "15555c7a0816aaa3b040614d2cb389c1850bbb83" 0
+"5"
+```
+脚本已经驻留到Redis内存中了，不同的客户端都可以来调用他
