--- a/亿级流量系统多级缓存高并发系统架构实战一.md
+++ b/亿级流量系统多级缓存高并发系统架构实战一.md
@@ -50,4 +50,17 @@ return count
 [root@chaoren0 ~]# redis-cli evalsha "15555c7a0816aaa3b040614d2cb389c1850bbb83" 0
 "5"
 ```
-脚本已经驻留到Redis内存中了，不同的客户端都可以来调用他
+脚本已经驻留到Redis内存中了，不同的客户端都可以来调用他。同时，再上传相同的脚本，得到的哈希值是一样的，
+这是根据文件算出来的。真要是一次次上传的话会比较浪费带宽。如果一个脚本没执行完，Redis是无法接受别的请求的:
+```
+127.0.0.1:6379> eval "while true do end" 0
+
+```
+此时再开一个客户端：
+```
+[root@chaoren0 ~]# redis-cli
+127.0.0.1:6379> keys *
+(error) BUSY Redis is busy running a script. You can only call SCRIPT KILL or SHUTDOWN NOSAVE.
+```
+从另一个侧面证明了Redis是单线程的。lua脚本不能太长，就应该很简单，避免阻塞.真的像上面这样阻塞住了，可以用
+```script kill```来终止. 更多详见```redis-cli script help```
