--- a/亿级流量系统多级缓存高并发系统架构实战一.md
+++ b/亿级流量系统多级缓存高并发系统架构实战一.md
@@ -1,4 +1,4 @@
-# Lua 与Redis整合
+# Lua 与Redis或Nginx整合
 ## 前言
 Lua与nginx或Redis整合可以做的事情：
 网关API路由转发、Openregistry + kong,也就是Lua + nginx还可以做软防火墙，防止恶意请求和SQL注入、防刷。360可以提供基于机器学习的用户行为分析，分析是否是爬虫或者恶意请求。单点登录（建权）整合系统、输出动态页面（之前JD的商品详情页面就是拿lua动态输出出去的，有基于Lua语言的模版引擎，类似于Themleaf，它还可以去访问缓存系统，拿回来数据，包装一下输出动态页面，不需要包装的可以直接输出JSON）还可以在Redis里做一些Redis自身做不了的事情，比如做在线人数、点击次数累计的叠加，让nginx连Redis（不让tomcat接点击次数这个事，减负），接到请求之后直接加到Redis里的请求计数上。还有一些业务逻辑的请求，可以让它去做异步消费，连到Kafka上。还可以做验证码，验证码在高并发下，一般不会拿Java去生成图形验证码的，nginx就能生成。这部分跟Java基本没太大关系。
@@ -63,4 +63,11 @@ return count
 (error) BUSY Redis is busy running a script. You can only call SCRIPT KILL or SHUTDOWN NOSAVE.
 ```
 从另一个侧面证明了Redis是单线程的。lua脚本不能太长，就应该很简单，避免阻塞.真的像上面这样阻塞住了，可以用
-```script kill```来终止. 更多详见```redis-cli script help```
+```script kill```来终止. 更多详见```redis-cli script help``` 执行脚本代码这种操作只会在master node
+上面执行，本质上是在一台机器上执行的，所以没有分布式系统所带来的一致性的问题
+
+## Openresty Nginx + Lua
+
+Lua和Nginx中核可以去连接数据库或者消息中间件，他自己还可以做JSON的数据转换。高性能网关以及开源的kong，也是
+基于Openresty的。安装：https://openresty.org/en/linux-packages.html Openresty就是Nginx + LuaJIT
+额外又加了很多lua的包.默认安装目录：`/usr/local/openresty`
