--- a/亿级流量系统多级缓存高并发系统架构实战一.md
+++ b/亿级流量系统多级缓存高并发系统架构实战一.md
@@ -70,4 +70,16 @@ return count
 
 Lua和Nginx中核可以去连接数据库或者消息中间件，他自己还可以做JSON的数据转换。高性能网关以及开源的kong，也是
 基于Openresty的。安装：https://openresty.org/en/linux-packages.html Openresty就是Nginx + LuaJIT
-额外又加了很多lua的包.默认安装目录：`/usr/local/openresty`
+额外又加了很多lua的包.默认安装目录：`/usr/local/openresty`  
+
+集成Lua：在`/usr/local/openresty/nginx/conf/nginx.conf`中server block中加一个location：
+```
+location /lua {
+    default_type text/html;
+    content_by_lua '
+        ngx.say("<h1>Hello World!</h1>")
+    '；
+}
+```
+content_by_lua之所以能写，是因为nginx把它编译进来了，它能找到这个命令。如果没有集成luajit的话就报错了。别忘
+了加响应头类型：`default_type text/html;` 以及下面是ngx而不是nginx（坑）
