--- a/亿级流量系统多级缓存高并发系统架构实战一.md
+++ b/亿级流量系统多级缓存高并发系统架构实战一.md
@@ -82,4 +82,15 @@ location /lua {
 }
 ```
 content_by_lua之所以能写，是因为nginx把它编译进来了，它能找到这个命令。如果没有集成luajit的话就报错了。别忘
-了加响应头类型：`default_type text/html;` 以及下面是ngx而不是nginx（坑）
+了加响应头类型：`default_type text/html;` 以及下面是ngx而不是nginx（坑）。这样改了之后，访问`http://192.168.1.2/lua`
+就在页面上显示"Hello World"了。但是这样写似乎不太干净利索，我们可以直接引入一个lua脚本文件来执行，这么做：用下面的
+location块换掉上面的那个
+```
+location /lua {
+    default_type text/html;
+    content_by_lua_file lua-script/test.lua;
+}
+```
+`lua-script/test.lua;`是个相对于`/usr/local/openresty/nginx/`的路径
+调试nginx错误：`systemctl status openresty.service`或者查看`/usr/local/openresty/nginx/logs/error.log`
+看最新的错误是什么
