--- a/亿级流量系统多级缓存高并发系统架构实战一.md
+++ b/亿级流量系统多级缓存高并发系统架构实战一.md
@@ -91,6 +91,7 @@ location /lua {
     content_by_lua_file lua-script/test.lua;
 }
 ```
-`lua-script/test.lua;`是个相对于`/usr/local/openresty/nginx/`的路径
+`lua-script/test.lua;`是个相对于`/usr/local/openresty/nginx/`的路径. test.lua文件中写了一句：
+`ngx.say("<h1>Hello World!</h1>")`
 调试nginx错误：`systemctl status openresty.service`或者查看`/usr/local/openresty/nginx/logs/error.log`
 看最新的错误是什么
