--- a/亿级流量系统多级缓存高并发系统架构实战一.md
+++ b/亿级流量系统多级缓存高并发系统架构实战一.md
@@ -95,3 +95,50 @@ location /lua {
 `ngx.say("<h1>Hello World!</h1>")`
 调试nginx错误：`systemctl status openresty.service`或者查看`/usr/local/openresty/nginx/logs/error.log`
 看最新的错误是什么
+lua脚本还能查看request中URL中的参数，在 `lua-script/test.lua` 中写`ngx.say(ngx.var.arg_a);`即可以取出参数名为a的值，即要访问`http://192.168.1.2/lua?a=2`
+lua拿到所有的参数并打印：
+```
+local uri_args = ngx.req.get_uri_args();
+
+for k, v in pairs(uri_args) do
+        if type(v) == table then
+                ngx.say(k, " : ", table.concat(v, ", "), "<br />")
+        else
+                ngx.say(k, ": ", v, "<br />")
+        end
+end
+```
+可以试试`http://192.168.1.2/lua?a=1&b=2&c=3&c=8`
+lua还可以取出请求头信息：
+```
+local headers = ngx.req.get_headers()
+ngx.say("Host: ", headers["Host"], "<br />")
+ngx.say("user-agent: ", headers["user_agent"], "<br />")
+ngx.say("user-agent: ", headers.user_agent, "<br />")
+for k, v in pairs(v) do
+        if type(v) == "table" then
+                ngx.say(k, " : ", table.concat(v, ","), "<br />")
+        else
+                ngx.say(k, " : ", v, "<br />")
+        end
+end
+```
+现在我们既可以取参数也可以取请求头信息，就可以做很多事情了。可以限制访问，不能请求一些违规的URL（以前也做过一个Tomcat的Filte，但是那时候已经把请求放过去，打到Tomcat上了），
+建权可以在这里做,请求的时候带过来一个token，或者把它取出来之后做各种分析。nginx和lua结合可以做定向转发，location的配置只能截取分析uri，后面的参数他就管不了了，但是结合了lua
+就可以分析和转发控制的更细：比如传过来的url是`http://192.168.1.2/lua?itemId=100`， 我们可以分析这个itemId参数，它的值在0-100分到一个server，101-200到另一个... 这叫
+URL定向转发，还可以封IP，拦截地域、做web防火墙、取验证码、声称图像、输出html，组成拖拽式的验证码（一般交给第三方去做）、直接输出JSON、连接Redis或Kafka、输出动态页面。在整个
+系统架构里面属于动态接入层。nginx一般来说不做集群，最多做个主备高可用，nginx主要要带有业务逻辑了。nginx一般只做个LB和流量转发，一台nginx扛不住的话，得重新考虑架构了。只有
+专门拿nginx做业务逻辑的时候才拿nginx做集群，这是因为nginx性能足够高
+获取post请求：
+```
+ngx.req.read_body()
+ngx.say("post args begin", "<br />")
+local post_args = ngx.req.get_post_args()
+for k, v in pairs(post_args) do
+        if type(v) == "table" then
+                ngx.say(k, " : ", table.concat(v, ","), "<br />")
+        else
+                ngx.say(k, " : ", v, "<br />")
+        end
+end
+```
