--- a/亿级流量系统多级缓存高并发系统架构实战一.md
+++ b/亿级流量系统多级缓存高并发系统架构实战一.md
@@ -128,7 +128,7 @@ end
 就可以分析和转发控制的更细：比如传过来的url是`http://192.168.1.2/lua?itemId=100`， 我们可以分析这个itemId参数，它的值在0-100分到一个server，101-200到另一个... 这叫
 URL定向转发，还可以封IP，拦截地域、做web防火墙、取验证码、声称图像、输出html，组成拖拽式的验证码（一般交给第三方去做）、直接输出JSON、连接Redis或Kafka、输出动态页面。在整个
 系统架构里面属于动态接入层。nginx一般来说不做集群，最多做个主备高可用，nginx主要要带有业务逻辑了。nginx一般只做个LB和流量转发，一台nginx扛不住的话，得重新考虑架构了。只有
-专门拿nginx做业务逻辑的时候才拿nginx做集群，这是因为nginx性能足够高
+专门拿nginx做业务逻辑的时候才拿nginx做集群，这是因为nginx性能足够高. 一般lvs分发给nginx
 获取post请求：
 ```
 ngx.req.read_body()
@@ -142,3 +142,5 @@ for k, v in pairs(post_args) do
         end
 end
 ```
+热数据，比如最近3-5天的，放在数据库里，所有历史订单会做冷备份，一个大的数据存储的空间，比如HBase（一般做历史数据查询和统计报表）。成熟的业务系统，从来发SQL的时候
+没有delete语句，这是个重要的知识点，只作标记。也可以删，但要记文本日志（可以用来还原数据），但还是需要一层数据层
