--- a/亿级流量系统多级缓存高并发系统架构实战一.md
+++ b/亿级流量系统多级缓存高并发系统架构实战一.md
@@ -101,7 +101,7 @@ lua拿到所有的参数并打印：
 local uri_args = ngx.req.get_uri_args();
 
 for k, v in pairs(uri_args) do
-        if type(v) == table then
+        if type(v) == "table" then
                 ngx.say(k, " : ", table.concat(v, ", "), "<br />")
         else
                 ngx.say(k, ": ", v, "<br />")
