--- a/亿级流量系统多级缓存高并发系统架构实战一.md
+++ b/亿级流量系统多级缓存高并发系统架构实战一.md
@@ -126,7 +126,7 @@ end
 现在我们既可以取参数也可以取请求头信息，就可以做很多事情了。可以限制访问，不能请求一些违规的URL（以前也做过一个Tomcat的Filter，但是那时候已经把请求放过去，打到Tomcat上了），
 建权可以在这里做,请求的时候带过来一个token，或者把它取出来之后做各种分析。nginx和lua结合可以做定向转发，location的配置只能截取分析uri，后面的参数他就管不了了，但是结合了lua
 就可以分析和转发控制的更细：比如传过来的url是`http://192.168.1.2/lua?itemId=100`， 我们可以分析这个itemId参数，它的值在0-100分到一个server，101-200到另一个... 这叫
-URL定向转发，还可以封IP，拦截地域、做web防火墙、取验证码、声称图像、输出html，组成拖拽式的验证码（一般交给第三方去做）、直接输出JSON、连接Redis或Kafka、输出动态页面。在整个
+URL定向转发，还可以封IP，拦截地域、做web防火墙、取验证码、生成图像、输出html，组成拖拽式的验证码（一般交给第三方去做）、直接输出JSON、连接Redis或Kafka、输出动态页面。在整个
 系统架构里面属于动态接入层。nginx一般来说不做集群，最多做个主备高可用，nginx主要要带有业务逻辑了。nginx一般只做个LB和流量转发，一台nginx扛不住的话，得重新考虑架构了。只有
 专门拿nginx做业务逻辑的时候才拿nginx做集群，这是因为nginx性能足够高. 一般lvs分发给nginx
 获取post请求：
