--- a/亿级流量系统多级缓存高并发系统架构实战二.md
+++ b/亿级流量系统多级缓存高并发系统架构实战二.md
@@ -20,6 +20,10 @@
 服务器也不一样，这就可以快速响应用户的请求，这种技术就叫CDN。各个nginx不在一个地方，目的就是"一秒定律"。过去是"三秒法则"，现在随着网络越来越好、4G变5G，宽带也越来越便宜，动不动就是几百兆
 的，虽然带宽上来了，但是岩石下不来也不行，比如网游和视频会议，这就需要全球去部署nginx节点。接下来考虑一个问题，这些nginx服务器上放什么？
 
-全球各地的nginx上可以放：html、css、静态图片。可以做基于反向代理的负载均衡、动静分离、写脚本做软防火墙、生成验证码等等
+全球各地的nginx上可以放：html、js、css、静态图片。可以做基于反向代理的负载均衡、动静分离、写脚本做软防火墙、生成验证码等等。还可以放音视频点播资源、大文件下载。如何治理这些静态资源成了个
+问题。解决这个问题需要开发一个应用系统DNS服务（或者使用云服务/zk），放在应用服务器集群和各个nginx之间，三者同步数据的时候要开socket走各种网络IO（netty）。跨机房或者异地的数据备份、请求
+备份、提速。异地多活跟CDN很像。服务器里的数据存在哪儿呢？nginx有内存缓存，可以用：  
+1. lua_shared_dict做全局缓存，他借助的是lua语言，拿到ngx.shared.shared_data,访问的是nginx内存里面的缓存数据  
+2. lua-resty-lrucache 
 
 根据地点、进行配置给出IP  
