--- a/亿级流量系统多级缓存高并发系统架构实战二.md
+++ b/亿级流量系统多级缓存高并发系统架构实战二.md
@@ -24,6 +24,15 @@
 问题。解决这个问题需要开发一个应用系统DNS服务（或者使用云服务/zk），放在应用服务器集群和各个nginx之间，三者同步数据的时候要开socket走各种网络IO（netty）。跨机房或者异地的数据备份、请求
 备份、提速。异地多活跟CDN很像。服务器里的数据存在哪儿呢？nginx有内存缓存，可以用：  
 1. lua_shared_dict做全局缓存，他借助的是lua语言，拿到ngx.shared.shared_data,访问的是nginx内存里面的缓存数据  
-2. lua-resty-lrucache 
+2. lua-resty-lrucache： lua实现的一个简单的LRU缓存，适合在Lua空间里直接缓存比较复杂的Lua数据结构 网页链接他相比ngx_lua共享内存字典可以省去昂贵的序列化操作，相比memcached这样的外部
+   服务又能省去较昂贵的socket操作
+3. http_proxy_cache 本地磁盘缓存，缓存静态文件用的，非常方便，而且别看是磁盘缓存，他也可以做到高性能。把内存空间映射成磁盘的方式解决读取本地磁盘速度的问题。CDN的nginx的http_proxy_cache
+   要有过期时间或者有能力去获取已过期或不存在的数据，对于这些数据要从nginx文件服务器（可能是nginx+FastDFS？）拿过去。CDN就能极大的过滤请求、削峰、request清洗。题外话：app现在没有这么火
+   了，因为开发和推广成本太高：以前3-5块钱就能让一个用户装上app，现在得20-30块钱，而且每天在用的app就那么几个。 app作为client，会直接访问服务接口，因为UI在发布APP的时候就已经开发好了，
+   很少有更新，这些文件都已经内置装好了web的这种css、js，还可以做热更新：到服务器端把代码拉到app执行更新：lua脚本代码做热更新。app store和google play至少是以前，只支持全量更新。缓存的
+   UI画面已经存在app包里面了，数据上的缓存就更能做了，因为整个应用都是我们做的。Lua在游戏界是很厉害的，《魔兽世界》除了3D引擎和游戏骨架是用C和C++写的，剩下的UI的组织都是Lua写的，可以看
+   《魔兽世界》的客户端，解开之后全是Lua代码
+
+高并发的系统架构，没有解决某个具体问题的银弹，不同的场景之下有不同的技术选型
 
 根据地点、进行配置给出IP  
