--- a/亿级流量系统多级缓存高并发系统架构实战三.md
+++ b/亿级流量系统多级缓存高并发系统架构实战三.md
@@ -136,8 +136,8 @@ URI：item.html, 可以分发到每个机房里。这时候每个机房里同步
 在软件开发行业，硬件是最不值钱的），两个机房隔得太远的话延迟会比较高，解决方案很简单：拉专线，必须拉专线，不可能走公网。nginx和CDN这两层架构，在域名解析的时候就自带了多级缓存：
 本地和DNS供应商那里都有缓存。大公司可以在国内申请备案，走专线网络，不受GFW的限制。这两级缓存就足以支撑亿级流量了。题外话：舆情系统。比如我是个名人，我在新浪、微博、微信等买了舆情
 监控服务，这样一旦有我名字的关键字被转发超过一定次数，我就会接收到通知，马上就可以预防流言的传播，因为舆情系统还有追溯的功能，抓出谁第一个制造的流言。瓜子二手车拿openresty做的WAF
-（Web Application Firewall）软防火墙，一般公司很难做到亿级流量，FLAG的流量可能流量也没有淘宝、拼夕夕那么高，一般先拿一个物理防火墙过滤无效请求，再拿一个openresty做流量的清洗
-和筛选、做动静分离做集群就够了
+（Web Application Firewall）软防火墙（主要是做硬防火墙不需要做或者做不了的复杂逻辑，硬防火墙主要还是比较简单的逻辑规则），一般公司很难做到亿级流量，FLAG的流量可能流量也没有淘宝、
+并夕夕那么高，一般先拿一个物理防火墙过滤无效请求，再拿一个openresty做流量的清洗和筛选、做动静分离做集群就够了
 
 
 
