--- a/亿级流量系统多级缓存高并发系统架构实战三.md
+++ b/亿级流量系统多级缓存高并发系统架构实战三.md
@@ -355,9 +355,27 @@ default_type text/html;
 
  }
 ```
-
-
-
+单引号和双引号都行。`redis2_query` 和 `redis2_pass`是官方的openresty自带的函数模块。这时候刷新`192.168.1.2/foo`看到+OK，然后查看Redis的key  
+`redis2_pass`传递、中转到Redis服务器  
+编者按：还可以发送Redis的get请求：
+```
+location /foo2 {
+    default_type text/html;
+    redis2_query get one;
+    redis2_pass 127.0.0.1:6379;
+}
+```
+重启openresty访问`http://192.168.1.2/foo2`可以看到：`$5 first`
+```
+location /foo3 {
+    default_type text/html;
+    set_unescape_uri $key $arg_key1;
+    redis2_query get $key;
+    redis2_pass 127.0.0.1:6379;
+}
+```
+通过`http://192.168.1.2/foo3?key1=one`可以在浏览器打印出：`$5 first`,就是把URL中key1=后面的那个值（one）放到变量$key  
+中，然后再向Redis服务器发送`get one` 然后返回了`$5 first`，lua可以返回两个值，不同于java
 
 
 #### get
