--- a/亿级流量系统多级缓存高并发系统架构实战三.md
+++ b/亿级流量系统多级缓存高并发系统架构实战三.md
@@ -255,9 +255,21 @@ server {
 
 ### lua-resty-redis访问redis
 
+`/usr/local/openresty/lualib/resty/redis.lua`中定义了require redis中的各个函数. lua的red:connect可以返回两个值，ok和err，
+这是有必要性的，因为java可以有try catch，但是lua没有，他就靠这两个返回值判断是否执行成功。运行时异常，在这种解释型语言里不太容易捕获到。
+关键是没有JVM这个沙盒去抓住这个异常，这一点像C和OC，出错了就是error和crash。
+
+#### 踩坑
+location /lua {}存在的情况下，再来一个location /luaresty{}后面的被浏览器访问的时候会404.  
+修改lua脚本之后需要`service openresty reload`
+
 #### 常用方法
 
 ```lua
+local cjson = require "cjson"
+local redis = require "resty.redis"
+local red = redis:new()
+
 local res, err = red:get("key")
 
 local res, err = red:lrange("nokey", 0, 1)
@@ -409,7 +421,7 @@ location = /set {
 
 default_type text/html;
 
-redis2_pass 192.168.199.161:6379;
+redis2_pass 127.0.0.1:6379;
 
 redis2_query auth 123123;
  
@@ -422,7 +434,8 @@ redis2_query auth 123123;
 
  }
 ```
-
+通过`http://192.168.1.2/set?key=two&val=second`访问，返回OK，然后可以`redis-cli`之后`get two`验证. location{} 里面不好写各种逻辑，
+比如if else，所以redis2_pass 和 redis2_query这些函数不太经常用
 
 
 
