--- a/亿级流量系统多级缓存高并发系统架构实战三.md
+++ b/亿级流量系统多级缓存高并发系统架构实战三.md
@@ -255,6 +255,8 @@ server {
 
 ### lua-resty-redis访问redis
 
+学习的时候可以搜索"lua-resty-redis"，openresty官网可以学习一下： https://github.com/openresty/lua-resty-redis
+
 `/usr/local/openresty/lualib/resty/redis.lua`中定义了require redis中的各个函数. lua的red:connect可以返回两个值，ok和err，
 这是有必要性的，因为java可以有try catch，但是lua没有，他就靠这两个返回值判断是否执行成功。运行时异常，在这种解释型语言里不太容易捕获到。
 关键是没有JVM这个沙盒去抓住这个异常，这一点像C和OC，出错了就是error和crash。
@@ -320,6 +322,7 @@ red:init_pipeline()
 
 results, err = red:commit_pipeline()
 ```
+这里可以做对前面结果的逻辑判断的。比Multi强大
 
 #### 认证
 
