--- a/亿级流量系统多级缓存高并发系统架构实战三.md
+++ b/亿级流量系统多级缓存高并发系统架构实战三.md
@@ -514,7 +514,13 @@ default_type text/html;
 
 #### nginx url_hash
 
-Nginx第三方模块，在转发请求时如果后端服务器宕机，会导致503错误
+Nginx第三方模块，在转发请求时如果后端服务器宕机，会导致503服务器未知错误，中转方面的错误。lua脚本可以手动的控制中转到哪一台服务器上  
+lua版的http client可以检测nginx后的各个机器是否存活，存活的话就让它参与哈希，否则不让它参与哈希。比如后台有5台服务器，就拿哈希值跟
+5取模，0-4分发，如果第三方模块和健康检查模块没有建立数据通信的话，就做不到动态的分配，而且想做一致性哈希环的高可用，纯的URL一致性哈希
+也做不到，只是取了个哈希值返回来。lua可以让我们自己写代码实现一致性哈希。这里要自己引入lua相关的依赖: 直接从https://github.com/ledgetech/lua-resty-http/tree/master/lib/resty
+下载，然后放到/usr/local/openresty/lualib/resty 下面。http.lua就是个http的客户端，作用就是实现http协议，这里要配置一下DNS，也
+就是在location里面加一句`resolver 8.8.8.8;`，就可以访问或中转到一些网络上的API（支持http的，如Spring Cloud），这样就可以拿nginx
+调用微服务了，nginx成了入口的一个门面，如果知道具体的服务在哪儿，就可以绕过Spring Cloud的网关直接请求
 
 #### lua-resty-http
 类似于http-client（封装了http协议的java客户端），实现了http协议的lua客户端，可以远程去访问数据，手动实现反向代理。请求打到我这里，接到之后，帮对方请求后台服务器
@@ -566,8 +572,9 @@ ngx.say(resp.body)
 httpc:close()
 
 ```
-
-http模块加入
+返回的sogou原始header中有的资源有的是需要的，可以做一个匹配，如果不需要，不赋值也可以，有一个默认的header直接传回去。  
+这就可以中转请求到后端的服务器了
+http（location大括号里面）模块加入
 
 ```
 resolver 8.8.8.8;
@@ -578,36 +585,31 @@ resolver 8.8.8.8;
 ### lua-resty-http实现一致性hash负载均衡
 
 ```lua
-local http = require("resty.http")  
-local httpc = http.new()  
+local http = require "resty.http"
+local httpc = http.new()
 
-local hosts = {"192.168.2.161","192.168.2.162"}
+local hosts = {"192.168.1.111:8080", "192.168.1.112:8080"}
 
-local item_id= ngx.var.arg_item_id
+local item_id = ngx.var.arg_id
 
 local id_hash = ngx.crc32_long(item_id)
-local index = (id_hash % 2) +1
-  
-local resp, err = httpc:request_uri("http://"..hosts[index], {  
-    method = "GET",  
-    path = "/sogou?query=resty.http",  
-    headers = {  
-        ["User-Agent"] = "Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/40.0.2214.111 Safari/537.36"  
-    }  
-})  
-  
-if not resp then  
-    ngx.say("request error :", err)  
-    return  
-end  
-  
- 
-ngx.say(resp.body)  
-  
+local index = (id_hash % 2) + 1
+
+local resp, err = httpc:request_uri("http://"..hosts[index], {
+        method = "GET",
+        headers = {
+                 ["User-Agent"] = "Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/40.0.2214.111 Safari/537.36"
+        }
+})
+
+if not resp then
+        ngx.say("Request error: ", err)
+end
+
+ngx.say(resp.body)
 httpc:close()
-
 ```
-
+lua的表是从index = 1开始的. `hosts = {"192.168.1.111:8080", "192.168.1.112:8080"}`这一行如果是80端口，可以只写IP
 ## 模板实时渲染 lua-resty-template
 
 https://github.com/bungle/lua-resty-template
