--- a/亿级流量系统多级缓存高并发系统架构实战三.md
+++ b/亿级流量系统多级缓存高并发系统架构实战三.md
@@ -609,7 +609,8 @@ end
 ngx.say(resp.body)
 httpc:close()
 ```
-lua的表是从index = 1开始的. `hosts = {"192.168.1.111:8080", "192.168.1.112:8080"}`这一行如果是80端口，可以只写IP
+lua的表是从index = 1开始的. `hosts = {"192.168.1.111:8080", "192.168.1.112:8080"}`这一行如果是80端口，可以只写IP. path在这里的httpc:request_uri中没用上  
+这样就使用lua实现了自定义规则的定向流量转发（但现在这个2台机器的2，是写死了的）
 ## 模板实时渲染 lua-resty-template
 
 https://github.com/bungle/lua-resty-template
