--- a/亿级流量系统多级缓存高并发系统架构实战三.md
+++ b/亿级流量系统多级缓存高并发系统架构实战三.md
@@ -579,7 +579,7 @@ http（location大括号里面）模块加入
 ```
 resolver 8.8.8.8;
 ```
-
+use Google's open DNS server for an example
 
 
 ### lua-resty-http实现一致性hash负载均衡
@@ -610,7 +610,9 @@ ngx.say(resp.body)
 httpc:close()
 ```
 lua的表是从index = 1开始的. `hosts = {"192.168.1.111:8080", "192.168.1.112:8080"}`这一行如果是80端口，可以只写IP. path在这里的httpc:request_uri中没用上  
-这样就使用lua实现了自定义规则的定向流量转发（但现在这个2台机器的2，是写死了的）
+这样就使用lua实现了自定义规则的定向流量转发（但现在这个2台机器的2，是写死了的）。 这里就可以判断URL上有没有一些不正常的信息，比如SQL注入、绕过权限、狂刷页面、放爬虫
+等（DDOS到不了这一层，他只是建立连接而不发请求，那东西应该在防火墙那边去防）。如果单纯用负载均衡器的话，是很难扩展的。httpc:request_uri这里也可以发Redis请求，如：
+red:get("key")，还可以发基于Spring Cloud的http请求
 ## 模板实时渲染 lua-resty-template
 
 https://github.com/bungle/lua-resty-template
