--- a/亿级流量系统多级缓存高并发系统架构实战三.md
+++ b/亿级流量系统多级缓存高并发系统架构实战三.md
@@ -614,6 +614,12 @@ lua的表是从index = 1开始的. `hosts = {"192.168.1.111:8080", "192.168.1.11
 这样就使用lua实现了自定义规则的定向流量转发（但现在这个2台机器的2，是写死了的）。 这里就可以判断URL上有没有一些不正常的信息，比如SQL注入、绕过权限、狂刷页面、放爬虫
 等（DDOS到不了这一层，他只是建立连接而不发请求，那东西应该在防火墙那边去防）。如果单纯用负载均衡器的话，是很难扩展的。httpc:request_uri这里也可以发Redis请求，如：
 red:get("key")，还可以发基于Spring Cloud的http请求. `local item_id = ngx.var.arg_id`就相当于location里的`set_unescape_uri $val $arg_val;`
+
+#### 更优化一些的架构：
+还是一台nginx在最前面向后面做定向流量转发，后面的机器不是tomcat，而是nginx，每台nginx上都有html模版和缓存的data，这里的data的来源是Redis，是Redis全量数据的一部分。
+模版和缓存数据在各台机器之间的同步是个问题。数据源数据更改后，广播到缓存（重建缓存）时的数据不一致是允许的，不允许就没意义了，本来就是想牺牲一点一致性加快速度的。html
+也是在内存里的，只更新内存就行了。这就不需要治理静态html文件了，静态文件的治理取决于文件的个数，多了就没法干了
+
 ## 模板实时渲染 lua-resty-template
 
 https://github.com/bungle/lua-resty-template
@@ -678,6 +684,9 @@ view:render()
 
 
 ```
+其中，view.html文件要放在`/usr/local/openresty/nginx/html`下才可以  
+`template.render("view.html", { message = "Hel11lo, Worl1d!" }) `一句顶后面三句
+
 
 ### 二、执行函数，得到渲染之后的内容
 
@@ -735,8 +744,8 @@ template.render([[
 ### 多值传入
 
 ```lua
-template.caching(false)
 local template = require("resty.template")
+template.caching(false)
 local context = {
     name = "lucy",
     age = 50,
