--- a/亿级流量系统多级缓存架构五.md
+++ b/亿级流量系统多级缓存架构五.md
@@ -113,7 +113,9 @@ G1，G2为数据节点，同时存储了键值对 key=v:value=0
 A/P  
 通过持久化的方式来同步数据，RDB和AOP来完成数据同步，保证一致性；可用性通过replica副本和哨兵来同步数据。有个问题：锁的信息记在了主节点上，他要向子节点去同步数据，是通过RDB和AOF，
 zk同步成功了会有个回调，通知已经同步成功，同步要一般成功、存活，这样zk一致性就比较高，为Redis就做不到，用户不知道Redis什么时候同步完成；同步过程中出了问题，主节点Down了在做主备
-切换的时候，没有像zk（停服选举）一样的灾难恢复机制。Redis各台机器之间是主从关系，而zk各台机器之间是兄弟关系。Redis是牺牲了一致性换来了可用性
+切换的时候，没有像zk（停服选举）一样的灾难恢复机制。Redis各台机器之间是主从关系，而zk各台机器之间是兄弟关系。Redis是牺牲了一致性换来了可用性。第一个线程在主节点上拿到了锁，但是
+还没同步到其他节点，这时候第二个线程来了一看其他节点，发现没有上锁，他就拿到了，然后就脑裂了。一致性要求比较低、数据量比较大的时候，放到Redis里。zk不适合存储数据，做协调、一致性
+用zk
 
 
 #### Zookeeper
@@ -198,7 +200,7 @@ CAP中的一致性
 
 啥叫**分区容错**？
 
-发生在分布式系统内部互访通信，是指分布式网络中部分网络不可用，但系统依然正常对外提供服务。
+发生在分布式系统**内部**互访通信，是指分布式**网络**中部分网络不可用，但系统依然正常对外提供服务。
 
 上图中 G1,G2是两台服务器，G1 向 G2 发送一条消息，G2 可能无法收到
 
