--- a/亿级流量系统多级缓存架构五.md
+++ b/亿级流量系统多级缓存架构五.md
@@ -200,7 +200,8 @@ CAP中的一致性
 
 啥叫**分区容错**？
 
-发生在分布式系统**内部**互访通信，是指分布式**网络**中部分网络不可用，但系统依然正常对外提供服务。
+发生在分布式系统**内部**互访通信，是指分布式**网络**中部分网络不可用，但系统依然正常对外提供服务。啥叫分区：单节点叫没分区。分区容错性无法达到100%，
+说白了就是无法保证内部网络之间的一根根网线不出问题
 
 上图中 G1,G2是两台服务器，G1 向 G2 发送一条消息，G2 可能无法收到
 
@@ -230,17 +231,20 @@ P：代表不同空间
 
 ### CP
 
-不同空间中的数据，如果要求他们所有状态一致，则必然不在同一时间。
+不同空间中的数据，如果要求他们所有状态一致，则必然不在同一时间。允许多节点网络有异常的情况下尽量提高数据的一致性。集群机器之间同步失败就给
+用户抛异常，或者设置超时时间。这样就牺牲了可用性
 
 ### AP
 
-不同空间中，如果要求同一时间都可以从任意的空间拿到数据，则必然数据的状态不一致。
+不同空间中，如果要求同一时间都可以从任意的空间拿到数据，则必然数据的状态不一致。  
+客户端向一台机器写数据，来了其他的机器，我们让不让读？让读就有个问题，数据还没同步完成，要加锁，别让他读还没改完的数据，如果锁住了就不可用了。
+追求高可用一定会失去数据一致性，因为同步的过程一定会有一个时间窗口（除非就只有一个节点）
 
 ### CA
 
 不同空间的数据，如果要求任意时间都可以从任意空间拿到状态一致的数据，则空间数必然为1.
 
-
+### 根儿上的原因就是机器会宕机、网络不可靠
 
 **要强一致性的地方**: 
 
