--- a/亿级流量系统多级缓存架构五.md
+++ b/亿级流量系统多级缓存架构五.md
@@ -210,7 +210,9 @@ CAP中的一致性
 分区容错性是指分区具有容错性，我们可以尽可能的提高容错性，但是无法避免，
 
 如果发生失败，就要在A和C之间做出选择。
-要么停止系统进行错误恢复，要么继续服务但是降低一致性，所以我们说只能保证AP或CP。
+要么停止系统进行错误恢复，要么继续服务但是降低一致性，所以我们说只能保证AP或CP。  
+
+这里自己的理解是某个服务让不让人把自己的节点一变多。让，则有分区容忍性；不让就没有
 
 
 
@@ -277,7 +279,7 @@ ACM国际大学生程序设计竞赛（英文全称：ACM International Collegia
 
 **基本可用**
 
-在分布式系统出现故障的时候，允许损失部分可用性,支持分区失败，即保证核心可用。
+在分布式系统出现故障的时候，允许损失部分可用性,支持分区失败，即保证核心可用。即使所有的数据都错了，也得给用户一个有好的页面，基本可用
 
 ##### Soft State
 
@@ -288,5 +290,9 @@ ACM国际大学生程序设计竞赛（英文全称：ACM International Collegia
 ##### Eventually Consistent
 
 最终一致性
+Eurerka遵循的就是最终一致性（有个同步操作），zk比最终一致性还要强一点（因为它可以设置强一致性，要求半数同时）
+上面说软状态，然后不可能一直是软状态，必须有个时间期限（具体长度取决于网络状态、集群机器个数）。在期限过后系统能够保证在没有其他新的更新操作的情况下，数据最终一定能够达到一致的状态，因此所有客户端对系统的数据访问最终都能够获取到最新的值。
 
-上面说软状态，然后不可能一直是软状态，必须有个时间期限。在期限过后系统能够保证在没有其他新的更新操作的情况下，数据最终一定能够达到一致的状态，因此所有客户端对系统的数据访问最终都能够获取到最新的值。
+##### 强一致性
+
+有一个节点没同步成功就不行，牺牲了性能。分布式ID，高并发的情景下生成唯一的ID、银行结算、转账，宁可服务不可用也不能丢钱
