--- a/亿级流量系统多级缓存架构七.md
+++ b/亿级流量系统多级缓存架构七.md
@@ -12,13 +12,14 @@ yum install httpd-tools
 
 
 
-即限制流量进入
+即限制流量进入，不接受过多的请求
 
-**缓存**，是用来增加系统吞吐量，提升访问速度提供高并发。
+**缓存**，是用来增加系统吞吐量，提升访问速度提供高并发。避免了很多复杂的计算、复杂的查询
 
 **降级**，是在系统某些服务组件不可用的时候、流量暴增、资源耗尽等情况下，暂时屏蔽掉出问题的服务，继续提供降级服务，给用户尽可能的友好提示，返回兜底数据，不会影响整体业务流程，待问题解决再重新上线服务 
 
-**限流**，是指在使用缓存和降级无效的场景。比如当达到阈值后限制接口调用频率，访问次数，库存个数等，在出现服务不可用之前，提前把服务降级。只服务好一部分用户。
+**限流**，是指在使用缓存和降级无效的场景。比如当达到阈值后限制接口调用频率，访问次数，库存个数等，在出现服务不可用之前，提前把服务降级。只服务好一部分用户。承受qps的时候是一下子来500还是3面内来500
+         是不一样的，合着一秒其实只有170
 
 
 
@@ -36,24 +37,91 @@ app 统计
 
 简单粗暴
 
-比如线程池大小，数据库连接池大小、nginx连接数等都属于计数器算法。
+比如线程池大小，数据库连接池大小、nginx连接数、tomcat的maxConnections、acceptCount、maxThreads等都属于计数器算法。nginx.conf里的 worker_connections 规定了每个worker处理的最大连接数，
+worker_processes = 1 则规定了只有1个worker（一般是有几个核心就有几个worker）这里配置的是总的闸门。在nginx和不同的服务（location中配置的）之间要有个限流的东西。连接数跟后面（这个nginx内）
+能处理的上限不对等，有可能造成服务流量/请求的倾斜
 
-全局或某段时间范围达到阈值则限流。
+全局或某段时间范围达到阈值则限流。限制流量涌入不等于拒绝连接，而是拒绝服务，因为连接的消耗并不是特别大，服务的业务逻辑表复杂。拒绝之后根据业务的不同想返回啥就返回啥，一般来说返回一个 503 的状态码
+或者一个比较友好的页面。这时候千万别想什么消息中间件缓存什么的，一想就乱了，没这么复杂。在ningx.cong 中具体的某个的location中设置`limit_conn` 就可以了，具体的location有不同的配额。但是最好
+还是在建立连接的时候就分出来哪些连接是打到那些location上的。但是现在做不到，除非用一些更底层的方式，比如修改系统源码。还有一个办法是把两个location分别放到两个nginx上。无法建立连接的请求要等一
+会儿，http连接有个timeout可以设置。timeout不只是建立连接，而且包括整套业务流程全都走完返回。后面的流程有多复杂，我们自己去算。  
 
+逻辑越简单性能越高，如果只是频繁读取静态图片的话只是开socket读取磁盘再发出去，还可以设置缓存，连磁盘IO都省去了。Tomcat是个容器，JavaEE Servlet实现是在Tomcat，JDK里面就没有Servlet实现的包。
+JavaEE只是一套标准，定义了一堆接口，什么Listener、Filter、Interceptor、Servlet等等，建立连接的时候，得按照JavaEE的标准走流程，把一堆Java代码全都跑一遍，建立连接、产生cookie、记录session、
+初始化servlet等，非常臃肿。所以Tomcat是一个非常重量级的容器
+
+```
+http {
+    limit_conn_zone $binary_remote_addr zone=addr:10m;
+    limit_conn_status 503;
+    limit_conn_log_level error;
+    server {
+        location /limit {
+            limit_conn addr 1;# limit_conn 是模块addr是参数名，上面zone=addr设置的，意思就是引用上面规定的那一套配置。1是指并发连接数，同时nginx能处理的业务数, 超过1个则丢弃，503
+        }
+    }
+}
+```
+limit_conn 存放key的共享内存区域zone，和指定key的最大连接数。  
+limit_conn_zone 共享内存区域的配置，内存大小，key（$binary_remote_addr -> ip地址 $server_name -> 主机名）  
+limit_conn_status 被限流后的状态码。淘宝网经常就在你购物的时候弹出个503，大批量的产生这种错误就是被限流了  
+limit_conn_log_level 日志级别  
+详见：http://nginx.org/en/docs/http/ngx_http_limit_conn_module.html
+AB 测试： 在nginx机器上可以安装：  
+`yum install httpd-tools -y` 然后执行   
+`ab -n 150 -c 50 http://localhost/limit` (-n表示总共多少request，-c表示同时有多少个)进行压测,然后查看logs：  
+```
+[root@localhost ~]# tail -f /usr/local/openresty/nginx/logs/access.log 
+127.0.0.1 - - [21/May/2020:22:42:17 -0700] "GET /limit HTTP/1.0" 503 541 "-" "ApacheBench/2.3"
+127.0.0.1 - - [21/May/2020:22:42:17 -0700] "GET /limit HTTP/1.0" 503 541 "-" "ApacheBench/2.3"
+127.0.0.1 - - [21/May/2020:22:42:17 -0700] "GET /limit HTTP/1.0" 503 541 "-" "ApacheBench/2.3"
+127.0.0.1 - - [21/May/2020:22:42:17 -0700] "GET /limit HTTP/1.0" 503 541 "-" "ApacheBench/2.3"
+127.0.0.1 - - [21/May/2020:22:42:17 -0700] "GET /limit HTTP/1.0" 503 541 "-" "ApacheBench/2.3"
+127.0.0.1 - - [21/May/2020:22:42:17 -0700] "GET /limit HTTP/1.0" 503 541 "-" "ApacheBench/2.3"
+127.0.0.1 - - [21/May/2020:22:42:17 -0700] "GET /limit HTTP/1.0" 503 541 "-" "ApacheBench/2.3"
+127.0.0.1 - - [21/May/2020:22:42:17 -0700] "GET /limit HTTP/1.0" 503 541 "-" "ApacheBench/2.3"
+127.0.0.1 - - [21/May/2020:22:42:17 -0700] "GET /limit HTTP/1.0" 503 541 "-" "ApacheBench/2.3"
+127.0.0.1 - - [21/May/2020:22:42:17 -0700] "GET /limit HTTP/1.0" 200 5 "-" "ApacheBench/2.3"
+```
+```
+[root@localhost ~]# tail -f /usr/local/openresty/nginx/logs/error.log 
+2020/05/21 22:42:17 [error] 25946#25946: *377 limiting connections by zone "addr", client: 127.0.0.1, server: localhost, request: "GET /limit HTTP/1.0", host: "localhost"
+2020/05/21 22:42:17 [error] 25946#25946: *378 limiting connections by zone "addr", client: 127.0.0.1, server: localhost, request: "GET /limit HTTP/1.0", host: "localhost"
+2020/05/21 22:42:17 [error] 25946#25946: *379 limiting connections by zone "addr", client: 127.0.0.1, server: localhost, request: "GET /limit HTTP/1.0", host: "localhost"
+2020/05/21 22:42:17 [error] 25946#25946: *380 limiting connections by zone "addr", client: 127.0.0.1, server: localhost, request: "GET /limit HTTP/1.0", host: "localhost"
+2020/05/21 22:42:17 [error] 25946#25946: *381 limiting connections by zone "addr", client: 127.0.0.1, server: localhost, request: "GET /limit HTTP/1.0", host: "localhost"
+2020/05/21 22:42:17 [error] 25946#25946: *382 limiting connections by zone "addr", client: 127.0.0.1, server: localhost, request: "GET /limit HTTP/1.0", host: "localhost"
+2020/05/21 22:42:17 [error] 25946#25946: *383 limiting connections by zone "addr", client: 127.0.0.1, server: localhost, request: "GET /limit HTTP/1.0", host: "localhost"
+2020/05/21 22:42:17 [error] 25946#25946: *384 limiting connections by zone "addr", client: 127.0.0.1, server: localhost, request: "GET /limit HTTP/1.0", host: "localhost"
+2020/05/21 22:42:17 [error] 25946#25946: *385 limiting connections by zone "addr", client: 127.0.0.1, server: localhost, request: "GET /limit HTTP/1.0", host: "localhost"
+2020/05/21 22:42:17 [error] 25946#25946: *386 limiting connections by zone "addr", client: 127.0.0.1, server: localhost, request: "GET /limit HTTP/1.0", host: "localhost"
+```
+输出信息中还有：
+```
+Complete requests:      150
+Failed requests:        146
+...
+Non-2xx responses:      146
+```
+这时候`limit_conn addr 1;`这个配置起作用了，不管AB测试那边来的是多少个链接，总是按照自己的这个节奏来
 #### 漏桶算法
 
 ![img](images/1272254-0d4388e78c3f18c6.png)
-
+桶的大小比如是20000（worker_connections配置的），但是同时处理的只有一个，一个个地进入后面的lua或者images的业务逻辑，其他的都在桶里等着（但有可能有消费过慢导致超时的，这是另一回事了）网络连接的
+建立和逻辑的处理不是一回事。20000只是建立连接，没有进入业务逻辑的消费阶段
 ```
-削峰
+削峰：整体流量到大洪峰的时候把连接数给过滤掉，超过20000连接的那部分过滤掉，超过20000个连都连不上
 缓冲
 消费速度固定 因为计算性能固定
 保证桶不能忙
 ```
+注意：这里一定别联想MQ、Kafka啥的，容易乱。  
+这个漏桶算法有个问题：计算是极为饱和的，每条任务线都玩儿了命的去桶里取出请求，CPU浪费，始终是100%，不断地一个一个（limit_conn addr 的配置）都不带休息的。这就引出了下面的算法
 
 
 
 #### 令牌桶算法
+在固定的之间窗口内处理多少连接，比如5request/sec，也就是说每隔200ms处理一个request，中间就有喘息的机会了，CPU不至于太饱和
 
 ![img](images/webp)
 
@@ -65,7 +133,7 @@ app 统计
 
 **区别**
 
-- 令牌桶是按照固定速率从桶里拿令牌消费，如果令牌为0，则拒绝新请求
+- 令牌桶是按照固定速率从桶里拿令牌消费，处理完了之后把令牌还回来，如果令牌为0，则拒绝新请求
 - 漏桶是按照固定速率流出请求，流入速率不控制，当桶内请求达到阈值，新请求则被拒绝。
 - 令牌桶支持每次拿多个令牌，平均流入速率，并支持突发流入，还可以支持缓慢提升流入速度
 
